# A9N

./: .gitignore  3  CMakeLists.txt  CODE_OF_CONDUCT.md  CODING_GUIDELINES.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ]  compile_flags.txt  kernel.elf  kernel.map
kernel/: kernel.elf  (+1 more)
src/hal/: CMakeLists.txt
src/hal/include/hal/: hal_result.hpp
src/hal/include/interface/: arch_initializer.hpp  architecture_initializer.hpp  context_switch.hpp  hal.hpp  hal_factory.hpp  interrupt.hpp  interrupt_handler.hpp  memory_manager.hpp  port_io.hpp  process_manager.hpp  serial.hpp  timer.hpp
src/hal/x86_64/: CMakeLists.txt  _boot.s  _paging.s  _segment_configurator.s  _syscall.s  _x86_64_context_switch.s  _x86_64_interrupt.s  _x86_64_interrupt_configurator.s  _x86_64_port_io.s  arch_context.hpp  arch_context_switch.cpp  arch_context_switch.hpp  arch_initializer.cpp  arch_initializer.hpp  boot.c  boot.s  boot.s.bak  common.hpp  hal_factory.cpp  hal_factory.hpp  interrupt.cpp  interrupt.hpp  interrupt_descriptor.hpp  kernel.ld  kernel.ld.bak  memory_manager.cpp  memory_manager.hpp  paging.cpp  paging.hpp  pic.cpp  pic.hpp  pit_timer.cpp  pit_timer.hpp  port_io.cpp  port_io.hpp  process_manager.cpp  process_manager.hpp  segment_configurator.cpp  segment_configurator.hpp  serial.cpp  (+13 more)
src/hal/x86_64/arch/: _control_register.s  _rflags.s  _segment_configurator.s  arch_initializer.cpp  cpu.cpp  cpuid.s  segment_configurator.cpp
src/hal/x86_64/boot/: _boot.s  _boot_ap.s  boot.c  boot_ap.s  init.cpp
src/hal/x86_64/factory/: hal_factory.cpp
src/hal/x86_64/interrupt/: _x86_64_interrupt.s  _x86_64_interrupt_configurator.s  apic.cpp  interrupt.cpp  pic.cpp
src/hal/x86_64/io/: _x86_64_port_io.s  io_port.cpp  serial.cpp
src/hal/x86_64/memory/: memory_manager.cpp
src/hal/x86_64/platform/: acpi.cpp
src/hal/x86_64/port/: port_io.cpp
src/hal/x86_64/process/: _x86_64_idle.s  _x86_64_jump_to_user.s  process_manager.cpp
src/hal/x86_64/systemcall/: _syscall.s  _syscall_test.s  syscall.cpp
src/hal/x86_64/time/: acpi_pm_timer.cpp  local_apic_timer.cpp  pit_timer.cpp
src/hal/x86_64/virtualization/: virtual_cpu.cpp
src/kernel/: CMakeLists.txt  boot_info.h  context_switch.cpp  context_switch.hpp  gdt_initializer.cpp  gdt_initializer.hpp  interrupt.hpp  interrupt_manager.cpp  interrupt_manager.hpp  ipc_manager.cpp  ipc_manager.hpp  kernel.cpp  kernel.hpp  logger.cpp  main.cpp  memory_manager.cpp  memory_manager.hpp  memory_type.h  memory_type.hpp  new.cpp  print.cpp  print.hpp  printf.cpp  process.cpp  process.hpp  process_manager.cpp  process_manager.hpp  scheduler.cpp  scheduler.hpp  systemcall.cpp  systemcall.hpp  timer.cpp  timer.hpp
src/kernel/boot/: init.cpp
src/kernel/capability/: address_space.cpp  capability.hpp  capability_factory.cpp  capability_node.cpp  frame_capability.cpp  generic.cpp  interrupt_port.cpp  interrupt_region.cpp  io_port_capability.cpp  ipc_port.cpp  notification_port.cpp  page_table_capability.cpp  process_control_block.cpp  virtual_cpu_capability.cpp
src/kernel/hal/include/: architecture_initializer.h  architecture_initializer.hpp  hal.hpp  hal_factory.hpp  interrupt.hpp  interrupt_handler.hpp  port_io.hpp  serial.hpp
src/kernel/hal/x86_64/: _gdt_configurer.s  _segment_configurator.s  _x86_64_interrupt_configurator.s  _x86_64_port_io.s  gdt_configurer.cpp  gdt_configurer.hpp  gdt_initializer.cpp  gdt_initializer.hpp  interrupt_descriptor.hpp  segment_configurator.cpp  segment_configurator.hpp  segment_configurer.cpp  segment_configurer.hpp  x86_64_architecture_initializer.cpp  x86_64_architecture_initializer.hpp  x86_64_hal.cpp  x86_64_hal.hpp  x86_64_hal_factory.hpp  x86_64_interrupt.cpp  x86_64_interrupt.hpp  x86_64_port_io.cpp  x86_64_port_io.hpp  x86_64_serial.cpp  x86_64_serial.hpp
src/kernel/include/: common.hpp  logger.hpp  message.hpp  process.hpp
src/kernel/include/cpp_dependent/: new.hpp
src/kernel/interrupt/: interrupt_manager.cpp
src/kernel/ipc/: ipc_manager.cpp  ipc_manager.notcpp
src/kernel/kernelcall/: kernel_call.cpp
src/kernel/memory/: memory_manager.cpp
src/kernel/process/: process.cpp  process_manager.cpp  scheduler.cpp
src/kernel/systemcall/: systemcall.cpp
src/kernel/time/: timer.cpp
src/kernel/utility/: cpp-support.cpp  logger.cpp  print.cpp
src/liba9n/: CMakeLists.txt
src/liba9n/cpp_dependent/: new.cpp
(+327 files in other folders)
